# Basic_Text_Based_RPG_Game

./: CMakeLists.txt  README.md
C_FILES/: Ability.c  Battle_Mechanics.c  Devs_kits.c  Display_Logic.c  Game_Mechanics.c  Item_Properties.c  MOB_LOGIC.c  Main.c  Predefined_Values.c  Save_Load.c  user_info.c
HEADER_FILES/: Battle_Mechanics.h  Devs_kit.h  Display_Logic.h  Game_Mechanics.h  Header_Store.h  Items_Properties.h  Mob.h  Predefined_Values.h  Save_Load.h  User_Information.h
